--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "private": true,
   "name": "dumiDocument",
   "version": "1.0.0",
+  "homepage": "https://daiwang-lei.github.io/dumiDoc/",
   "scripts": {
     "start": "dumi dev",
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d docs-dist",
     "build": "father-build",
-    "deploy": "npm run docs:build && npm run docs:deploy",
+    "deploy": "gh-pages -d build",
     "release": "npm run build && npm publish",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
+    "test:coverage": "umi-test --coverage",
+    "predeploy":"npm run build"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
